--- a/1_foundations/community_contributions/2_lab2_exercise.ipynb
+++ b/1_foundations/community_contributions/2_lab2_exercise.ipynb
@@ -29,18 +29,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(override=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Anthropic API Key not set (and this is optional)\n",
+      "Google API Key not set (and this is optional)\n",
+      "DeepSeek API Key not set (and this is optional)\n",
+      "Groq API Key not set (and this is optional)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the key prefixes to help with any debugging\n",
     "\n",
@@ -78,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,18 +112,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'user',\n",
+       "  'content': 'Please come up with a challenging, nuanced question that I can ask a number of LLMs to evaluate their collective intelligence. Answer only with the question, no explanation.'}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "messages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How can societies balance the ethical implications of AI advancements with the drive for innovation and economic growth, while ensuring equitable access and minimizing potential harms?\n"
+     ]
+    }
+   ],
    "source": [
     "openai = OpenAI()\n",
     "response = openai.chat.completions.create(\n",
@@ -113,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,9 +167,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Balancing the ethical implications of AI advancements with innovation and economic growth, while ensuring equitable access and minimizing potential harms, requires a multifaceted approach. Here are several strategies that societies can adopt:\n",
+       "\n",
+       "1. **Framework for Ethical AI Development**:\n",
+       "   - Establish clear ethical guidelines and frameworks for the development and deployment of AI technologies. This includes principles such as fairness, transparency, accountability, and respect for privacy.\n",
+       "   - Encourage the involvement of ethicists, social scientists, and diverse stakeholders in the design and implementation of AI systems to ensure a variety of perspectives and values are considered.\n",
+       "\n",
+       "2. **Inclusive Stakeholder Engagement**:\n",
+       "   - Create forums for public dialogue that include voices from various demographics, including marginalized communities, to ensure that AI advancements meet the needs of all citizens.\n",
+       "   - Involve interdisciplinary teams in AI development, capturing insights from fields such as sociology, psychology, and law to guide ethical considerations.\n",
+       "\n",
+       "3. **Regulatory Frameworks and Policies**:\n",
+       "   - Develop effective regulations and compliance mechanisms that hold companies accountable for the ethical implications of their AI technologies without stifling innovation.\n",
+       "   - Implement policy measures that promote responsible AI use, such as data protection laws and guidelines for ethical AI design.\n",
+       "\n",
+       "4. **Equitable Access and Inclusion**:\n",
+       "   - Ensure that AI technology is accessible to all segments of society, including small businesses, nonprofits, and underserved communities, to prevent widening the digital divide.\n",
+       "   - Promote digital literacy programs to equip individuals with the skills needed to interact with AI technologies effectively.\n",
+       "\n",
+       "5. **Investment in Research and Development**:\n",
+       "   - Encourage investments in R&D focused on ethical AI, including projects that explore societal impacts and applications that benefit the public good.\n",
+       "   - Allocate funding for academic and non-profit organizations that prioritize research into the societal impacts of AI technologies and seek to develop equitable solutions.\n",
+       "\n",
+       "6. **Continuous Monitoring and Adaptation**:\n",
+       "   - Establish mechanisms for ongoing assessment of AI systems to identify and address unintended consequences, biases, and inequities.\n",
+       "   - Encourage adaptive governance that can evolve with technological advancements, allowing regulations and guidelines to be updated as new ethical challenges arise.\n",
+       "\n",
+       "7. **Collaboration Between Public and Private Sectors**:\n",
+       "   - Foster partnerships between government, academia, and industry to align interests and share best practices in responsible AI development.\n",
+       "   - Create initiatives that focus on ethical AI as a competitive advantage in economic growth while prioritizing societal welfare.\n",
+       "\n",
+       "8. **Transparency and Accountability**:\n",
+       "   - Promote transparency in AI algorithms and decision-making processes to build trust and allow for scrutiny of AI systems.\n",
+       "   - Implement accountability measures for organizations that deploy AI, ensuring they can be held responsible for the impacts of their technologies.\n",
+       "\n",
+       "9. **Public Awareness and Education**:\n",
+       "   - Facilitate public education campaigns that inform citizens about AI technologies, their benefits, risks, and ethical considerations.\n",
+       "   - Encourage discussions about the implications of AI in various sectors, allowing for informed community engagement and advocacy.\n",
+       "\n",
+       "By integrating these strategies, societies can navigate the complex landscape of AI advancements, fostering innovation and economic growth while ensuring ethical considerations and equitable access are at the forefront of development."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# The API we know well\n",
     "\n",
@@ -212,9 +306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['gpt-4o-mini']\n",
+      "['Balancing the ethical implications of AI advancements with innovation and economic growth, while ensuring equitable access and minimizing potential harms, requires a multifaceted approach. Here are several strategies that societies can adopt:\\n\\n1. **Framework for Ethical AI Development**:\\n   - Establish clear ethical guidelines and frameworks for the development and deployment of AI technologies. This includes principles such as fairness, transparency, accountability, and respect for privacy.\\n   - Encourage the involvement of ethicists, social scientists, and diverse stakeholders in the design and implementation of AI systems to ensure a variety of perspectives and values are considered.\\n\\n2. **Inclusive Stakeholder Engagement**:\\n   - Create forums for public dialogue that include voices from various demographics, including marginalized communities, to ensure that AI advancements meet the needs of all citizens.\\n   - Involve interdisciplinary teams in AI development, capturing insights from fields such as sociology, psychology, and law to guide ethical considerations.\\n\\n3. **Regulatory Frameworks and Policies**:\\n   - Develop effective regulations and compliance mechanisms that hold companies accountable for the ethical implications of their AI technologies without stifling innovation.\\n   - Implement policy measures that promote responsible AI use, such as data protection laws and guidelines for ethical AI design.\\n\\n4. **Equitable Access and Inclusion**:\\n   - Ensure that AI technology is accessible to all segments of society, including small businesses, nonprofits, and underserved communities, to prevent widening the digital divide.\\n   - Promote digital literacy programs to equip individuals with the skills needed to interact with AI technologies effectively.\\n\\n5. **Investment in Research and Development**:\\n   - Encourage investments in R&D focused on ethical AI, including projects that explore societal impacts and applications that benefit the public good.\\n   - Allocate funding for academic and non-profit organizations that prioritize research into the societal impacts of AI technologies and seek to develop equitable solutions.\\n\\n6. **Continuous Monitoring and Adaptation**:\\n   - Establish mechanisms for ongoing assessment of AI systems to identify and address unintended consequences, biases, and inequities.\\n   - Encourage adaptive governance that can evolve with technological advancements, allowing regulations and guidelines to be updated as new ethical challenges arise.\\n\\n7. **Collaboration Between Public and Private Sectors**:\\n   - Foster partnerships between government, academia, and industry to align interests and share best practices in responsible AI development.\\n   - Create initiatives that focus on ethical AI as a competitive advantage in economic growth while prioritizing societal welfare.\\n\\n8. **Transparency and Accountability**:\\n   - Promote transparency in AI algorithms and decision-making processes to build trust and allow for scrutiny of AI systems.\\n   - Implement accountability measures for organizations that deploy AI, ensuring they can be held responsible for the impacts of their technologies.\\n\\n9. **Public Awareness and Education**:\\n   - Facilitate public education campaigns that inform citizens about AI technologies, their benefits, risks, and ethical considerations.\\n   - Encourage discussions about the implications of AI in various sectors, allowing for informed community engagement and advocacy.\\n\\nBy integrating these strategies, societies can navigate the complex landscape of AI advancements, fostering innovation and economic growth while ensuring ethical considerations and equitable access are at the forefront of development.']\n"
+     ]
+    }
+   ],
    "source": [
     "# So where are we?\n",
     "\n",
@@ -224,9 +327,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Teammate: gpt-4o-mini\n",
+      "\n",
+      "Balancing the ethical implications of AI advancements with innovation and economic growth, while ensuring equitable access and minimizing potential harms, requires a multifaceted approach. Here are several strategies that societies can adopt:\n",
+      "\n",
+      "1. **Framework for Ethical AI Development**:\n",
+      "   - Establish clear ethical guidelines and frameworks for the development and deployment of AI technologies. This includes principles such as fairness, transparency, accountability, and respect for privacy.\n",
+      "   - Encourage the involvement of ethicists, social scientists, and diverse stakeholders in the design and implementation of AI systems to ensure a variety of perspectives and values are considered.\n",
+      "\n",
+      "2. **Inclusive Stakeholder Engagement**:\n",
+      "   - Create forums for public dialogue that include voices from various demographics, including marginalized communities, to ensure that AI advancements meet the needs of all citizens.\n",
+      "   - Involve interdisciplinary teams in AI development, capturing insights from fields such as sociology, psychology, and law to guide ethical considerations.\n",
+      "\n",
+      "3. **Regulatory Frameworks and Policies**:\n",
+      "   - Develop effective regulations and compliance mechanisms that hold companies accountable for the ethical implications of their AI technologies without stifling innovation.\n",
+      "   - Implement policy measures that promote responsible AI use, such as data protection laws and guidelines for ethical AI design.\n",
+      "\n",
+      "4. **Equitable Access and Inclusion**:\n",
+      "   - Ensure that AI technology is accessible to all segments of society, including small businesses, nonprofits, and underserved communities, to prevent widening the digital divide.\n",
+      "   - Promote digital literacy programs to equip individuals with the skills needed to interact with AI technologies effectively.\n",
+      "\n",
+      "5. **Investment in Research and Development**:\n",
+      "   - Encourage investments in R&D focused on ethical AI, including projects that explore societal impacts and applications that benefit the public good.\n",
+      "   - Allocate funding for academic and non-profit organizations that prioritize research into the societal impacts of AI technologies and seek to develop equitable solutions.\n",
+      "\n",
+      "6. **Continuous Monitoring and Adaptation**:\n",
+      "   - Establish mechanisms for ongoing assessment of AI systems to identify and address unintended consequences, biases, and inequities.\n",
+      "   - Encourage adaptive governance that can evolve with technological advancements, allowing regulations and guidelines to be updated as new ethical challenges arise.\n",
+      "\n",
+      "7. **Collaboration Between Public and Private Sectors**:\n",
+      "   - Foster partnerships between government, academia, and industry to align interests and share best practices in responsible AI development.\n",
+      "   - Create initiatives that focus on ethical AI as a competitive advantage in economic growth while prioritizing societal welfare.\n",
+      "\n",
+      "8. **Transparency and Accountability**:\n",
+      "   - Promote transparency in AI algorithms and decision-making processes to build trust and allow for scrutiny of AI systems.\n",
+      "   - Implement accountability measures for organizations that deploy AI, ensuring they can be held responsible for the impacts of their technologies.\n",
+      "\n",
+      "9. **Public Awareness and Education**:\n",
+      "   - Facilitate public education campaigns that inform citizens about AI technologies, their benefits, risks, and ethical considerations.\n",
+      "   - Encourage discussions about the implications of AI in various sectors, allowing for informed community engagement and advocacy.\n",
+      "\n",
+      "By integrating these strategies, societies can navigate the complex landscape of AI advancements, fostering innovation and economic growth while ensuring ethical considerations and equitable access are at the forefront of development.\n"
+     ]
+    }
+   ],
    "source": [
     "# It's nice to know how to use \"zip\"\n",
     "for teammate, answer in zip(teammates, answers):\n",
@@ -328,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
